<resources>
    <string name="app_name">AdityaVision</string>
    <string name="store_name">ADITYAVISION</string>
    <string name="store_location">M 15,Sri Krishna Nagar, Patna–800001, Bihar</string>
    <string name="store_website">http://www.adityavision.in</string>
    <string name="store_email">info@adityavision.in</string>
    <string name="store_phone">1800 3000 7202</string>
    <string name="store_info">With aesthetically designed and conveniently located showrooms, Aditya Vision Limited caters to customers of all budgets and preferences of electronics products.</string>
</resources>
