<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.adityavision.companyInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="#000">
            
            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_marginLeft="10dp"
                android:textSize="40sp"
                android:textColor="#fff"/>
            
            <ImageView
            android:src="@drawable/icon_email_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />

            <ImageView
                android:src="@drawable/icon_phone_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />


        </LinearLayout>

        <!--Body-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical"
            >
            
            
                
                <ImageView
                    android:src="@drawable/store_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:scaleType="centerCrop"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingRight="16dp"
                    android:background="#fff">
                    
                    <TextView
                        android:text="@string/store_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="24sp"/>
                    
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp">
                        
                        <ImageView
                            android:src="@drawable/icon_location_black"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/location_icon"/>

                        <TextView
                            android:text="@string/store_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/location_icon"/>
                        
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp">

                        <ImageView
                            android:src="@drawable/icon_website_black"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/webiste_icon"/>

                        <TextView
                            android:text="@string/store_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/webiste_icon"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp">

                        <ImageView
                            android:src="@drawable/icon_email_black"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/email_icon"/>

                        <TextView
                            android:text="@string/store_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/email_icon"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp">

                        <ImageView
                            android:src="@drawable/icon_phone_black"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/phone_icon"/>

                        <TextView
                            android:text="@string/store_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/phone_icon"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="16dp"
                        >

                        <TextView
                            android:text="@string/store_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            />

                    </RelativeLayout>
                    
                
                </LinearLayout>
            

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>
